# Hyperparameter-Tuning-Search-Project

./: .gitignore  README.md  constants.py  hparam_search.py  main.py  openapi.yaml  pyproject.toml  requirements-dev.txt  test_models.py  utils.py
framework/: data_utils.py  datasets.py  fitness.py  training.py  utils.py
models/: ParamSpace.py  __init__.py  base.py  cnn.py  decision_tree.py  factory.py  knn.py  linear_regression.py  logistic_regression.py  mlp.py
notebooks/: experiment_analysis.ipynb  model_training_flow.ipynb  rs_training.ipynb
report/: .gitignore  main.tex  refs.bib
report/sections/: 1_introduction.tex  2_problem_formulation.tex  3_experiment.tex  4_results.tex  5_limitations.tex  6_conclusion.tex
scripts/: analyze_experiment.py  analyze_ga.py  analyze_ga_parallel_run.py  data_download.py  data_explorer.py  data_process.py  plots.py  run_experiment.py  run_final_training.py  train_cnn.py
search/: __init__.py  base.py  genetic_algorithm.py  particle_swarm.py  random_search.py
tests/: test_analyze_experiment.py
web/: ds_explorer.html
