[project]
name = "hyperparameter-tuning-search-project"
version = "0.1.0"
description = "A comprehensive framework for comparing metaheuristic algorithms in hyperparameter optimization of machine learning models"
authors = [
    {name = "Fernando and Kelvin", email = "your-email@example.com"}
]
keywords = ["machine-learning", "hyperparameter-optimization", "metaheuristics", "genetic-algorithm", "simulated-annealing", "particle-swarm-optimization"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Minimal core dependencies for the basic project structure
]

[project.optional-dependencies]
# Optional dependencies can be added as needed
# Example: dev = ["pytest", "black", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Tool configurations can be added here as needed
# [tool.pytest.ini_options]
# [tool.black] 
# [tool.mypy]
