[project]
name = "hyperparameter-tuning-search-project"
version = "0.1.0"
description = "hyperparameter optimization with metaheuristic algorithms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "fastapi>=0.119.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "uvicorn>=0.38.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
